[package]
name = "chip8"
version = "0.1.0"
authors = ["Julian van Dijk <j.m.c.vandijk@student.tudelft.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
pixels = "0.1.0"
winit = "0.22.0"
rand = "0.7.3"
device_query = "0.1.0"
