[package]
name = "chip8"
version = "0.1.0"
authors = ["Julian van Dijk <j.m.c.vandijk@student.tudelft.nl>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
pixels = "0.9.0"
winit = "0.26"
winit_input_helper = "0.12"
rand = "0.7.3"
device_query = "0.1.0"
cpal = "0.13.5"
anyhow = "1.0.57"